# Invisible_Watermark_GNN

./: Fourier_stable.ipynb  Google_Colab_TreeRing_Watermark.ipynb  README.md  Tree_Ring_Watermark_Experiment.ipynb  analyse.py  config.py  evaluate.py  pyproject.toml  requirements.txt  setup_and_run.sh
Watermark/: .gitignore  Optimization_ideas.md  Tree_Ring_Watermark_Experiment.ipynb  pyproject.toml  run_all.sh  setup_and_run.sh
Watermark/Instructions/Latex/: biblio.bib  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc
Watermark/experiment/: category_prompts.py  compare_results.py  configs.py  device_compat.py  mps_compat.py  run_baseline.py  run_experiment.py  run_multiring.py  run_optimized.py
Watermark/tree-ring-watermark/: optim_utils.py
experiment/: compare_results.py  configs.py  device_compat.py  landscape_prompts.py  run_baseline.py  run_experiment.py  run_optimized.py
notebooks/: colab_demo.ipynb
utils/: __init__.py  attacks.py  detection.py  metrics.py
watermark/: __init__.py  baseline.py  novel.py
